version 0.30

* Added support for gradual increase of clients number at the loading
   initial phase. Use tag CLIENTS_INITIAL_INC in GENERAL section
   to specify the number of loading clients to be added each second till
   the total clients number, specified by CLIENTS_NUM tag.

* The interleave timeout numbers will be interpreted now as milliseconds,
   not seconds as before. Take care to update your configuration files

version 0.23 06/12/2006, svn-79

* The limitation of 1000 clients per batch have been removed. Try 1500, 2000 and
  may be even more, but care about number of sockets available and their 
  recycling.
	
* The behavior of -r option reverted.
   The default behavior of curl-loader now is to re-use a tcp-connection for next
   request-response cycles. If you are specifying -r command-line option, the 
   connection will be closed and re-opened for the next request. Whether it is
   appropriate for you to work with -r or without depends on your server support
   of Keep-Alive, and the purpose of your testing. Try with and without -r and 
   see, what do you get. Connection reuse default decreases consumption of 
   opened descriptors (sockets) and ports with sockets in TIME_WAIT states.

* HTTP 4xx client errors are now supported with statistics, logging, etc

version 0.22 28/11/2006, svn-75

* Fixed stack smashing bug after curl_multi_fdset (). Libcurl
  cannot check, whether our descriptor is within valid FD_SETSIZE
  range. Therefore, we are increasing FD_SETSIZE and doing the job.
  Thanks to Evgeniy Polyakov <johnpol@2ka.mipt.ru> for reporting 
  the problem.

* HOWTOS-BIG-LOAD added to address the appropriate setup for large loads.

version 0.21 22/11/2006, svn-62

* Building bug fix and more explanations about building requirements.

* Code commented mostly and function headers added

* CURL handles moved from array in batch to the client context, to which
  it belongs

version 0.20 14/11/2006, svn-48
