@@ -24,7 +24,7 @@ UAS_URLS_NUM     = 1
 
 UAS_URL= http://localhost/apache2-default/index.html  #http://localhost/index.html
 UAS_URL_MAX_TIME = 3
-UAS_URL_INTERLEAVE_TIME = 1
+UAS_URL_INTERLEAVE_TIME = 1000
 
 ########### LOGOFF SECTION #################################
 LOGOFF=n
